--- a/brandonsanderson.html
+++ b/brandonsanderson.html
@@ -18,9 +18,18 @@
         display: inline;
         margin-inline-start: 1em;
       }
+      .italic{
+          text-align: center;
+      }
+      .italic img{
+          height: 50px;
+      }
     </style>
   </head>
   <body>
+    <div class="italic">
+        <a href="index.html"><img src="images/castle.png" alt="castle icon" title="Home"></a>
+      </div>
     <div class="center">
         <a href="levgrossman.html"><h3>Lev Grossman</h3></a>
         <a href="patrickrothfuss.html"><h3>Patrick Rothfuss</h3></a>
