--- a/index.html
+++ b/index.html
@@ -11,14 +11,28 @@
       .center {
         margin-left: auto;
         margin-right: auto;
-        width: 50%;
+        width: 60%;
         padding: 10px;
+      }
+      .center h3{
         display: inline;
         margin-inline-start: 10px;
+      }
+      .italic{
+        text-align:center;
+        font-style:italic;
+        font-size: 30px;
+      }
+      .italic img{
+        height:50px;
       }
     </style>
   </head>
   <body>
+    <div class="italic">
+      <a href="index.html"><img src="images/castle.png" alt="castle icon" title="Home"></a>
+    </div>
+    
     <div class="center">
       <a href="levgrossman.html"><h3>Lev Grossman</h3></a>
       <a href="patrickrothfuss.html"><h3>Patrick Rothfuss</h3></a>
