--- a/sitemap.html
+++ b/sitemap.html
@@ -4,8 +4,129 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .center {
+        margin-left: auto;
+        margin-right: auto;
+        width: 60%;
+        padding: 10px;
+      }
+      .center h3{
+        display: inline;
+        margin-inline-start: 10px;
+      }
+      .italic{
+        text-align:center;
+        font-style:italic;
+        font-size: 30px;
+      }
+      .italic img{
+        height:50px;
+      }
+        .author{
+            float:left;
+        }
+        .schwab{
+           padding:5px;
+        }
+        ul, li{
+            margin:1px;
+        }
+        li{
+            padding:2px;
+        }
+        .name{
+            font-weight:bold ;
+        }
+        h1{
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
+    <div class="italic">
+        <a href="index.html"><img src="images/castle.png" alt="castle icon" title="Home"></a>
+      </div>
+      
+      <div class="center">
+        <a href="levgrossman.html"><h3>Lev Grossman</h3></a>
+        <a href="patrickrothfuss.html"><h3>Patrick Rothfuss</h3></a>
+        <a href="brandonsanderson.html"><h3>Brandon Sanderson</h3></a>
+        <a href="veschwab.html"><h3>V.E. Schwab</h3></a>
+        <a href="community.html"><h3>Community</h3></a>
+        <a href="sitemap.html"><h3>Sitemap</h3></a>
+        <a href="contact.html"><h3>Contact</h3></a>
+      </div>
     <h1>Sitemap</h1>
+    <div class="middle">
+        <div class="author" class="sanderson">
+            <ul><span class="name">Brandon Sanderson</span>
+                <li>
+                    <a href="">Steelheart</a>
+                 </li> 
+                 <li>
+                     <a href="">Firefight</a>
+                  </li> 
+                  <li>
+                     <a href="">Calamity</a>
+                  </li>
+                  <li>
+                    <a href="">The Way of Kings</a>
+                 </li>
+                 <li>
+                    <a href="">Words of Radiance</a>
+                 </li>
+                 <li>
+                    <a href="">Oathbringer</a>
+                 </li>
+                 <li>
+                    <a href="">Rhythm of War</a>
+                 </li>
+            </ul>
+        </div>
+        <div class="author" class="grossman-rothfuss">
+            <ul><span class="name">Lev Grossman</span>
+                <li>
+                    <a href="">The Magicians</a>
+                 </li> 
+                 <li>
+                     <a href="">The Magician's King</a>
+                  </li> 
+                  <li>
+                     <a href="">The Magician's Land</a>
+                  </li> 
+            </ul>
+            <ul><span class="name">Patrick Rothfuss</span>
+               <li>
+                   <a href="">The Name of the Wind</a>
+                </li> 
+                <li>
+                    <a href="">The Wise Man's Fear</a>
+                 </li> 
+                 <li>
+                    <a href="">The Doors of Stone</a>
+                 </li> 
+            </ul>
+        </div>
+       <div class="author" class="schwab">
+        <ul><span class="name">V.E. Schwab</span>
+            <li>
+                <a href="">A Darker Shade of Magic</a>
+             </li> 
+             <li>
+                 <a href="">A Gathering of Shadows</a>
+              </li> 
+              <li>
+                 <a href="">A Conjuring of Light</a>
+              </li>
+              <li>
+                <a href="">Vicious</a>
+             </li>
+             <li>
+                <a href="">Vengeful</a>
+             </li>
+        </ul>
+       </div>
+    </div>
 </body>
 </html>
