Linked sanderson part of sitemap

--- a/brandonsanderson.html
+++ b/brandonsanderson.html
@@ -39,6 +39,7 @@
         <a href="sitemap.html"><h3>Sitemap</h3></a>
         <a href="contact.html"><h3>Contact</h3></a>
       </div>
+<a id="sanderson"></a>
     <h1>Brandon Sanderson</h1>
     <img src="images/brandon-sanderson-homepage.jpg" alt="Image of Brandon Sanderson" />
 
@@ -91,7 +92,7 @@
       alt="blog icon" 
       ></a>
     </div>
-
+<a id="steelheart"></a>
     <h2>Steelheart (The Reckoners, #1)</h2>
     <img src="images/steelheart.jpg" alt="Book Cover of Steelheart" />
 
@@ -141,6 +142,7 @@
   alt="authors website icon" 
   ></a>
 </div>
+<a id="firefight"></a>
 <h2>Firefight (The Reckoners, #2)</h2>
 <img src="images/firefight.jpg" alt="Firefight bookcover">
 <h2>Synopsis</h2>
@@ -189,6 +191,7 @@
       alt="authors website icon" 
       ></a>
     </div>
+    <a id="calamity"></a>
     <h2>Calamity (The Reckoners, #3)</h2>
 <img src="images/calamity.jpg" alt="calamity bookcover">
 <h2>Synopsis</h2>
@@ -237,6 +240,7 @@
       alt="authors website icon" 
       ></a>
     </div>
+    <a id="wayofkings"></a>
     <h2>The Way of Kings (The Stormlight Archive, #1)</h2>
     <img src="images/way-of-kings.jpg" alt="Way of Kings Bookcover">
     <h2>Synopsis</h2>
@@ -285,6 +289,7 @@
           alt="authors website icon" 
           ></a>
         </div>
+        <a id="wordsofradiance"></a>
         <h2>Words of Radiance (The Stormlight Archive, #2)</h2>
         <img src="images/words-of-radiance.jpg" alt="Words of Radiance Bookcover">
         <h2>Synopsis</h2>
@@ -333,6 +338,7 @@
               alt="authors website icon" 
               ></a>
             </div>
+            <a id="oathbringer"></a>
             <h2>Oathbringer (The Stormlight Archive, #3)</h2>
         <img src="images/oathbringer.jpg" alt="Oathbringer Bookcover">
         <h2>Synopsis</h2>
@@ -381,6 +387,7 @@
               alt="authors website icon" 
               ></a>
             </div>
+            <a id="rhythmofwar"></a>
             <h2>Rhythm of War (The Stormlight Archive, #4)</h2>
         <img src="images/rhythmofwar.jpg" alt="Rhythm of War Bookcover">
         <h2>Synopsis</h2>
