--- a/sitemap.html
+++ b/sitemap.html
@@ -17,8 +17,6 @@
       }
       .italic{
         text-align:center;
-        font-style:italic;
-        font-size: 30px;
       }
       .italic img{
         height:50px;
@@ -31,6 +29,7 @@
         }
         ul, li{
             margin:1px;
+            list-style-type: none;
         }
         li{
             padding:2px;
@@ -62,25 +61,25 @@
         <div class="author" class="sanderson">
             <ul><span class="name">Brandon Sanderson</span>
                 <li>
-                    <a href="">Steelheart</a>
+                    <a href="brandonsanderson.html#steelheart">Steelheart</a>
                  </li> 
                  <li>
-                     <a href="">Firefight</a>
+                     <a href="brandonsanderson.html#firefight"  href="">Firefight</a>
                   </li> 
                   <li>
-                     <a href="">Calamity</a>
+                     <a href="brandonsanderson.html#calamity">Calamity</a>
                   </li>
                   <li>
-                    <a href="">The Way of Kings</a>
+                    <a href="brandonsanderson.html#wayofkings">The Way of Kings</a>
                  </li>
                  <li>
-                    <a href="">Words of Radiance</a>
+                    <a href="brandonsanderson.html#wordsofradiance">Words of Radiance</a>
                  </li>
                  <li>
-                    <a href="">Oathbringer</a>
+                    <a href="brandonsanderson.html#oathbringer">Oathbringer</a>
                  </li>
                  <li>
-                    <a href="">Rhythm of War</a>
+                    <a href="brandonsanderson.html#rhythmofwar">Rhythm of War</a>
                  </li>
             </ul>
         </div>
