--- a/levgrossman.html
+++ b/levgrossman.html
@@ -39,6 +39,7 @@
       <a href="sitemap.html"><h3>Sitemap</h3></a>
       <a href="contact.html"><h3>Contact</h3></a>
     </div>
+    <a id="grossman"></a>
     <h1>Lev Grossman</h1>
     <img src="images/lev-grossman-homepage.jpg" alt="Image of Lev Grossman" />
 
@@ -91,7 +92,7 @@
       alt="blog icon" 
       ></a>
     </div>
-
+    <a id="magicians"></a>
     <h2>The Magicians</h2>
     <img src="images/themagicians.jpg" alt="Book Cover of The Magicians" />
 
@@ -141,6 +142,7 @@
   alt="authors website icon" 
   ></a>
 </div>
+<a id="magicianking"></a>
 <h2>The Magician King</h2>
 <img src="images/magicianking.jpg" alt="magician king bookcover">
 <h2>Synopsis</h2>
@@ -189,6 +191,7 @@
       alt="authors website icon" 
       ></a>
     </div>
+    <a id="magiciansland"></a>
     <h2>The Magician's Land</h2>
 <img src="images/magiciansland.jpg" alt="magician king bookcover">
 <h2>Synopsis</h2>
