--- a/patrickrothfuss.html
+++ b/patrickrothfuss.html
@@ -48,6 +48,7 @@
         <a href="sitemap.html"><h3>Sitemap</h3></a>
         <a href="contact.html"><h3>Contact</h3></a>
       </div>
+      <a id="rothfuss"></a>
     <h1>Patrick Rothfuss</h1>
     <img id="patrick"src="images/patrick-rothfuss-homepage.jpg" alt="Image of Patrick Rothfuss" />
 
@@ -100,7 +101,7 @@
       alt="blog icon" 
       ></a>
     </div>
-
+    <a id="nameofwind"></a>
     <h2>The Name of the Wind</h2>
     <img src="images/name-of-the-wind-bookcover.jpg" alt="Book Cover of The Name of the Wind" />
 
@@ -150,6 +151,7 @@
   alt="authors website icon" 
   ></a>
 </div>
+<a id="wisemanfear"></a>
 <h2>The Wise Man's Fear</h2>
 <img id="wise-man" src="images/wise-man's-fear-bookcover.jpg" alt="Wise Man's Fear bookcover">
 <h2>Synopsis</h2>
@@ -198,6 +200,7 @@
       alt="authors website icon" 
       ></a>
     </div>
+    <a id="doorsofstone"></a>
     <h2>The Doors of Stone</h2>
 <img id="doors-stone" src="images/doors-of-stone-bookcover.jpg" alt="Doors of Stone bookcover">
 <h2>Synopsis</h2>
