--- a/sitemap.html
+++ b/sitemap.html
@@ -14,6 +14,7 @@
       .center h3{
         display: inline;
         margin-inline-start: 10px;
+        color:black;
       }
       .italic{
         text-align:center;
@@ -35,10 +36,22 @@
             padding:2px;
         }
         .name{
-            font-weight:bold ;
+            font-weight:bold;
+        }
+        a.name{
+            text-decoration: none;
         }
         h1{
             text-align: center;
+        }
+        a:link{
+            color: blue;
+        }
+        a:visited{
+            color: blue;
+        }
+        a{
+            text-decoration: none;
         }
     </style>
 </head>
@@ -59,7 +72,7 @@
     <h1>Sitemap</h1>
     <div class="middle">
         <div class="author" class="sanderson">
-            <ul><span class="name">Brandon Sanderson</span>
+            <ul><span class="name">Brandon Sanderson</span></a>
                 <li>
                     <a href="brandonsanderson.html#steelheart">Steelheart</a>
                  </li> 
@@ -86,43 +99,43 @@
         <div class="author" class="grossman-rothfuss">
             <ul><span class="name">Lev Grossman</span>
                 <li>
-                    <a href="">The Magicians</a>
+                    <a href="levgrossman.html#magicians">The Magicians</a>
                  </li> 
                  <li>
-                     <a href="">The Magician's King</a>
+                     <a href="levgrossman.html#magicianking">The Magician King</a>
                   </li> 
                   <li>
-                     <a href="">The Magician's Land</a>
+                     <a href="levgrossman.html#magiciansland">The Magician's Land</a>
                   </li> 
             </ul>
             <ul><span class="name">Patrick Rothfuss</span>
                <li>
-                   <a href="">The Name of the Wind</a>
+                   <a href="patrickrothfuss.html#nameofwind">The Name of the Wind</a>
                 </li> 
                 <li>
-                    <a href="">The Wise Man's Fear</a>
+                    <a href="patrickrothfuss.html#wisemanfear">The Wise Man's Fear</a>
                  </li> 
                  <li>
-                    <a href="">The Doors of Stone</a>
+                    <a href="patrickrothfuss.html#doorsofstone">The Doors of Stone</a>
                  </li> 
             </ul>
         </div>
        <div class="author" class="schwab">
         <ul><span class="name">V.E. Schwab</span>
             <li>
-                <a href="">A Darker Shade of Magic</a>
+                <a href="veschwab.html#darkershademagic">A Darker Shade of Magic</a>
              </li> 
              <li>
-                 <a href="">A Gathering of Shadows</a>
+                 <a href="veschwab.html#gatheringshadows">A Gathering of Shadows</a>
               </li> 
               <li>
-                 <a href="">A Conjuring of Light</a>
+                 <a href="veschwab.html#conjuringlight">A Conjuring of Light</a>
               </li>
               <li>
-                <a href="">Vicious</a>
+                <a href="veschwab.html#vicious">Vicious</a>
              </li>
              <li>
-                <a href="">Vengeful</a>
+                <a href="veschwab.html#vengeful">Vengeful</a>
              </li>
         </ul>
        </div>
