--- a/veschwab.html
+++ b/veschwab.html
@@ -39,6 +39,7 @@
         <a href="sitemap.html"><h3>Sitemap</h3></a>
         <a href="contact.html"><h3>Contact</h3></a>
       </div>
+      <a id="schwab"></a>
     <h1>V.E. Schwab</h1>
     <img src="images/ve-schwab.jpg" alt="Image of V.E Schwab" />
 
@@ -91,7 +92,7 @@
       alt="blog icon" 
       ></a>
     </div>
-
+    <a id="darkershademagic"></a>
     <h2>A Darker Shade of Magic (Shades of Magic, #1)</h2>
     <img src="images/darker-shade-of-magic.jpg" alt="Book Cover of The Magicians" />
 
@@ -141,6 +142,7 @@
   alt="authors website icon" 
   ></a>
 </div>
+<a id="gatheringshadows"></a>
 <h2>A Gathering of Shadows (Shades of Magic, #2)</h2>
 <img src="images/gathering-of-shadows.jpg" alt="magician king bookcover">
 <h2>Synopsis</h2>
@@ -189,6 +191,7 @@
       alt="authors website icon" 
       ></a>
     </div>
+    <a id="conjuringlight"></a>
     <h2>A Conjuring of Light (Shades of Magic, #3)</h2>
 <img src="images/conjuring-of-light.jpg" alt="magician king bookcover">
 <h2>Synopsis</h2>
@@ -237,6 +240,7 @@
       alt="authors website icon" 
       ></a>
     </div>
+    <a id="vicious"></a>
     <h2>Vicious (Villians, #1)</h2>
     <img src="images/vicious.jpg" alt="magician king bookcover">
     <h2>Synopsis</h2>
@@ -285,6 +289,7 @@
           alt="authors website icon" 
           ></a>
         </div>
+        <a id="vengeful"></a>
         <h2>Vengeful (Villains, #2)</h2>
         <img src="images/vengeful.jpg" alt="magician king bookcover">
         <h2>Synopsis</h2>
