meta data and css styling on sitemap and link section

--- a/levgrossman.html
+++ b/levgrossman.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="iFantasy recommends great fantasy and sci-fi books from four prestigious authors of the genre, recommended by me, Emerson Litvak">
+    <meta name="keywords" content="fantasy books, fantasy, science fiction, sci-fi, Brandon Sanderson, V.E Schwab, Patrick Rothfuss, Lev grossman, The Magicians, The Magicians King, The Magicians Land, The Magicians Trilogy, books like Harry Potter, book recommendations, fantasy book recommendations, science fiction recommendations, sci-fi recommendations, fantasy and sci-fi recommendations, fantasy and science fiction recommendations, recommendations, looking for book, book, novel, epic, The Name of the Wind, The Wise Man's Fear, The Doors of Stone, Doors of Stone release date, Conjuring of Light, Darker Shade of Magic, Gathering of Shadows, Vicious, Vengeful, Superhero, Super Powers, magic, narnia, Fillory, talking animals, must read, looking, Steelheart, Calamity, Firefight, The Reckoners, The Way of Kings, Words of Radiance, Oathbringer, Rhythm of War, The Stormlight Archives, summer reading list, goodreads, George R.R. Martin, J.R. Tolkien, Great Fantasy Writers, Great Fantasy Authors">
+    <meta name="Author" content="Emerson Litvak">
     <title>Lev Grossman</title>
     <style>
       .external-link-icon img{
