--- a/patrickrothfuss.html
+++ b/patrickrothfuss.html
@@ -40,19 +40,52 @@
         color:black;
         text-decoration: none;
       }
+      .outer {
+            text-align: center;
+            position:relative;
+            margin-bottom:25px;
+            margin-top:0px;
+      }
+        .links{
+            display: inline-block;
+            margin: 5px;
+            background-image: image("images/linkbackground.jpg")
+            
+        }
+        h3{
+            color:black;
+            border: black 1.5px solid;
+            width:fit-content
+            
+        }
+        .title{
+            margin-bottom:25px;
+            margin-top:10px;
+        }
     </style>
   </head>
   <body>
     <div class="italic">
         <a href="index.html"><img src="images/castle.png" alt="castle icon" title="Home"></a>
       </div>
-    <div class="center">
-        <a href="levgrossman.html"><h3>Lev Grossman</h3></a>
-        <a href="patrickrothfuss.html"><h3>Patrick Rothfuss</h3></a>
-        <a href="brandonsanderson.html"><h3>Brandon Sanderson</h3></a>
-        <a href="veschwab.html"><h3>V.E. Schwab</h3></a>
-        <a href="sitemap.html"><h3>Sitemap</h3></a>
-        <a href="contact.html"><h3>Contact</h3></a>
+      <div class="outer">
+        <div class="links">
+            <a href="levgrossman.html"><h3>Lev Grossman</h3></a>
+        </div>
+        <div class="links">
+            <a href="patrickrothfuss.html"><h3>Patrick Rothfuss</h3></a>
+      </div>
+      <div class="links">
+            <a href="brandonsanderson.html"><h3>Brandon Sanderson</h3></a>
+      </div>
+      <div class="links">
+            <a href="veschwab.html"><h3>V.E. Schwab</h3></a>
+      </div>
+      <div class="links">
+            <a href="sitemap.html"><h3>Sitemap</h3></a>
+      </div>
+      <div class="links">
+            <a href="contact.html"><h3>Contact</h3></a>
       </div>
       <a id="rothfuss"></a>
     <h1>Patrick Rothfuss</h1>
