--- a/playground.html
+++ b/playground.html
@@ -5,18 +5,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-h3{
-    border: black 1px solid;
-    text-align: center;
-    width:fit-content
-    
-    
-}
+        .outer2{
+            position:relative;
+            margin-left: auto;
+            margin-right: auto;
+            width:70%
+
+        }
+        .imgname{
+            display: inline-block;
+
+        }
+        .imgborder{
+            display: block;
+            border:  black solid 5px;;
+            border-radius: 50%;
+        }
+        .img{
+        display: block;
+        border-radius: 50%;
+        height:150px;
+        width:150px;
+        }
+        .name{
+            text-align: center;
+
+        }
     </style>
 </head>
 <body>
     <div class="border">
         <h3>link</h3>
     </div>
+<div class = "outer2">
+        <div class="imgname">
+        <div class="imgborder">
+            <img class= "img" src="images/ve-schwab.jpg" alt="asdf">
+        </div>
+        <div class= "name">
+            <h3>V.E Schwab</h3>
+        </div>
+    </div>
+    <div class = "imgname">
+        <div class="imgborder">
+            <img class= "img" src="images/brandon-sanderson-homepage.jpg" alt="asdf">
+        </div>
+        <div class="name">
+            <h3>Brandon Sanderson</h3>
+        </div>
+    </div>
+    <div class="imgname">
+        <div class="imgborder">
+            <img class= "img" src="images/lev-grossman-homepage.jpg" alt="asdf">
+        </div>
+        <div class= "name">
+            <h3>V.E Schwab</h3>
+        </div>
+    </div>
+    <div class = "imgname">
+        <div class="imgborder">
+            <img class= "img" src="images/patrick-rothfuss-homepage.jpg" alt="asdf">
+        </div>
+        <div class="name">
+            <h3>Brandon Sanderson</h3>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
