--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
     </style>
 </head>
 <body>
-    <div class="italic">
+    <div class="home">
         <a href="index.html"><img src="images/castle.png" alt="castle icon" title="Home"></a>
       </div>
       
@@ -95,6 +95,7 @@
     </div>
     <div class="links">
           <a href="contact.html"><h3>Contact</h3></a>
+    </div>
     </div>
     <h1>Contact</h1>
     <h1>Emerson J. Litvak</h>
