--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
        <div class="italic">
       <a href="index.html"><img src="images/castle.png" alt="castle icon" title="Home"></a>
     </div>
+    
     <div class="outer">
       <div class="links">
           <a href="levgrossman.html"><h3>Lev Grossman</h3></a>
@@ -103,6 +104,7 @@
     </div>
     <div class="links">
           <a href="sitemap.html"><h3>Sitemap</h3></a>
+    </div>
     </div>
     <h1>Great Fantasy & Sci-Fi Recommendations</h1>
     <p>
