--- a/sitemap.html
+++ b/sitemap.html
@@ -84,7 +84,7 @@
     </style>
 </head>
 <body>
-    <div class="italic">
+    <div class="home">
         <a href="index.html"><img src="images/castle.png" alt="castle icon" title="Home"></a>
       </div>
       
@@ -155,10 +155,7 @@
                     </li> 
                     <li>
                         <a href="patrickrothfuss.html#wisemanfear">The Wise Man's Fear</a>
-                     </li> 
-                     <li>
-                        <a href="patrickrothfuss.html#doorsofstone">The Doors of Stone</a>
-                     </li> 
+                    </li>
                 </ul>
             </div>
            <div class="author">
