--- a/contact.html
+++ b/contact.html
@@ -7,29 +7,9 @@
     <meta name="keywords" content="contact, fantasy books, fantasy, science fiction, sci-fi, Brandon Sanderson, V.E Schwab, Patrick Rothfuss, Lev grossman, The Magicians, The Magicians King, The Magicians Land, The Magicians Trilogy, books like Harry Potter, book recommendations, fantasy book recommendations, science fiction recommendations, sci-fi recommendations, fantasy and sci-fi recommendations, fantasy and science fiction recommendations, recommendations, looking for book, book, novel, epic, The Name of the Wind, The Wise Man's Fear, The Doors of Stone, Doors of Stone release date, Conjuring of Light, Darker Shade of Magic, Gathering of Shadows, Vicious, Vengeful, Superhero, Super Powers, magic, narnia, Fillory, talking animals, must read, looking, Steelheart, Calamity, Firefight, The Reckoners, The Way of Kings, Words of Radiance, Oathbringer, Rhythm of War, The Stormlight Archives, summer reading list, goodreads, George R.R. Martin, J.R. Tolkien, Great Fantasy Writers, Great Fantasy Authors">
     <meta name="Author" content="Emerson Litvak">
     <title>Contact</title>
+    <link rel="stylesheet" type="text/css" href="styles/body.css">
+    <link rel="stylesheet" type="text/css" href="styles/header.css">
     <style>
-        .homepage-img {
-        height: 100px;
-      }
-      .center {
-        margin-left: auto;
-        margin-right: auto;
-        width: 60%;
-        padding: 10px;
-        
-      }
-      .center h3{
-        display: inline;
-        margin-inline-start: 10px;
-        color:black;
-       
-      }
-      .italic{
-        text-align:center;
-      }
-      .italic img{
-        height:50px;
-      }
       a{
         color:black;
         text-decoration: none;
@@ -186,12 +166,6 @@
                 <td>Patrick Rothfuss</td>
                 <td>he Kingkiller Chronicles #2</td>
                 <td>4.57</td>
-            </tr>
-            <tr>
-                <td><img src="images/doors-of-stone-bookcover.jpg" alt="doors of stone bookcover"></td>
-                <td>Patrick Rothfuss</td>
-                <td>he Kingkiller Chronicles #3</td>
-                <td>-</td>
             </tr>
             <tr>
                 <td><img src="images/darker-shade-of-magic.jpg" alt="darker shade of magic bookcover"></td>
