--- a/levgrossman.html
+++ b/levgrossman.html
@@ -17,7 +17,7 @@
     <div class="home">
       <a href="index.html"><img src="images/castle.png" alt="castle icon" title="Home"></a>
     </div>
-    
+
     <div class="outer">
       <div class="links">
           <a href="levgrossman.html"><h3>Lev Grossman</h3></a>
@@ -42,7 +42,7 @@
     <table>
       <tr>
         <td class="img">
-          <h2>Lev Grossman</h2>
+          <h2 class="heading">Lev Grossman</h2>
       <img id="authorimg" src="images/lev-grossman-homepage.jpg" alt="Image of Lev Grossman" />
        <div class="external-link-icon">
       <a href="https://www.facebook.com/levgrossman" target="_blank"
@@ -104,7 +104,7 @@ He is also the author of the international bestseller Codex.
     <table>
       <tr>
         <td class="img">
-          <h2 class="header">The Magicians</h2>
+          <h2 class="heading">The Magicians</h2>
           
           <img src="images/themagicians.jpg" alt="Book Cover of The Magicians" />
           <div class="external-link-icon">
@@ -173,7 +173,7 @@ He is also the author of the international bestseller Codex.
     <table>
       <tr>
         <td class="img">
-          <h2 class="header">The Magician King</h2>
+          <h2 class="heading">The Magician King</h2>
           <img src="images/magicianking.jpg" alt="magician king bookcover">
           <div class="external-link-icon">
   <a href="https://www.goodreads.com/book/show/10079321-the-magician-king" target="_blank"
@@ -238,7 +238,7 @@ He is also the author of the international bestseller Codex.
     <table>
       <tr>
         <td class="img">
-          <h2 class="header">The Magician's Land</h2>
+          <h2 class="heading">The Magician's Land</h2>
           <img src="images/magiciansland.jpg" alt="magician king bookcover">
           <div class="external-link-icon">
             <a href="https://www.goodreads.com/book/show/19103097-the-magician-s-land" target="_blank"
