--- a/brandonsanderson.html
+++ b/brandonsanderson.html
@@ -18,27 +18,30 @@
         <a href="index.html"><img src="images/castle.png" alt="castle icon" title="Home"></a>
       </div>
 
-    </div>
-    <div class="outer">
-      <div class="links">
-          <a href="levgrossman.html"><h3>Lev Grossman</h3></a>
+      <div class="home">
+        <a href="index.html"><img src="images/castle.png" alt="castle icon" title="Home"></a>
+      </div>
+  
+      <div class="outer">
+        <div class="links">
+            <a href="levgrossman.html"><h3 class="grossman">Lev Grossman</h3></a>
+        </div>
+        <div class="links">
+            <a href="patrickrothfuss.html"><h3 class="rothfuss">Patrick Rothfuss</h3></a>
       </div>
       <div class="links">
-          <a href="patrickrothfuss.html"><h3>Patrick Rothfuss</h3></a>
-    </div>
-    <div class="links">
-          <a href="brandonsanderson.html"><h3>Brandon Sanderson</h3></a>
-    </div>
-    <div class="links">
-          <a href="veschwab.html"><h3>V.E. Schwab</h3></a>
-    </div>
-    <div class="links">
-          <a href="sitemap.html"><h3>Sitemap</h3></a>
-    </div>
-    <div class="links">
-          <a href="contact.html"><h3>Contact</h3></a>
-    </div>
-    </div>
+            <a href="brandonsanderson.html"><h3 class="sanderson">Brandon Sanderson</h3></a>
+      </div>
+      <div class="links">
+            <a href="veschwab.html"><h3 class="schwab">V.E. Schwab</h3></a>
+      </div>
+      <div class="links">
+            <a href="sitemap.html"><h3 class="sitemap">Sitemap</h3></a>
+      </div>
+      <div class="links">
+            <a href="contact.html"><h3 class="contact">Contact</h3></a>
+      </div>
+      </div>
 <a id="sanderson"></a>
 <table>
   <tr>
