--- a/patrickrothfuss.html
+++ b/patrickrothfuss.html
@@ -20,22 +20,22 @@
 
     <div class="outer">
       <div class="links">
-          <a href="levgrossman.html"><h3>Lev Grossman</h3></a>
+          <a href="levgrossman.html"><h3 class="grossman">Lev Grossman</h3></a>
       </div>
       <div class="links">
-          <a href="patrickrothfuss.html"><h3>Patrick Rothfuss</h3></a>
+          <a href="patrickrothfuss.html"><h3 class="rothfuss">Patrick Rothfuss</h3></a>
     </div>
     <div class="links">
-          <a href="brandonsanderson.html"><h3>Brandon Sanderson</h3></a>
+          <a href="brandonsanderson.html"><h3 class="sanderson">Brandon Sanderson</h3></a>
     </div>
     <div class="links">
-          <a href="veschwab.html"><h3>V.E. Schwab</h3></a>
+          <a href="veschwab.html"><h3 class="schwab">V.E. Schwab</h3></a>
     </div>
     <div class="links">
-          <a href="sitemap.html"><h3>Sitemap</h3></a>
+          <a href="sitemap.html"><h3 class="sitemap">Sitemap</h3></a>
     </div>
     <div class="links">
-          <a href="contact.html"><h3>Contact</h3></a>
+          <a href="contact.html"><h3 class="contact">Contact</h3></a>
     </div>
     </div>
     
